<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="xiangmin">XIANGMIN</string>
    <string name="xiangmin_name">祥民家电</string>
    <string name="app_name">祥民家电服务移动平台</string>
    <string name="notification_ticker_recorder">正在后台录音</string>
    <string name="error_cant_create_recorder">ERROR: Failed to create an audio recorder</string>
    <string name="error_cant_create_dir">ERROR: Failed to create a directory</string>
    <string name="notification_text_recorder_pausing">录音已暂停</string>
    <string name="notification_text_recorder_recording">正在录音...</string>
    <string name="login_button_text">登录</string>
    <string name="login_logo_text">祥民家电服务移动平台</string>
    <string name="todo_manager_text">工单管理</string>
    <string name="notification_text">通知公告</string>
    <string name="todo_count_text">报表统计</string>
    <string name="system_settings_text">系统设置</string>
    <string name="go_text">动身</string>
    <string name="start_text">开始</string>
    <string name="note_text">填单</string>
    <string name="wait_text">挂起</string>
    <string name="over_text">完成</string>
    <string name="continue_text">继续</string>
    <string name="todo_id_text">工单标识：</string>
    <string name="todo_time_text">上门时间：</string>
    <string name="todo_username_text">用户姓名：</string>
    <string name="todo_address_text">用户地址：</string>
    <string name="todo_phonenumber_text">联系方式：</string>
    <string name="start_recoder_text">开始录音</string>
    <string name="todo_state_text">任务状态：</string>
    <string name="recoder_voice_text">||||||||||||||||||||</string>
    <string name="start_recoder_after_click_text">点击后开始录音</string>
    <string name="today_todolist_text">今日工单</string>
    <string name="tomorrw_todolist_text">明日工单</string>
    <string name="todolist_text">工单列表</string>
    <string name="login_network_failed_text">网络连接错误</string>
    <string name="login_username_null_text">用户名不能为空</string>
    <string name="login_password_null_text">密码不能为空</string>
    <string name="login_waiting_text">正在登录,请稍后...</string>
    <string name="login_connect_timeout_text">连接服务器超时</string>
    <string name="login_failed_text">登录失败</string>
    <string name="todo_detail_username_text">工程师：</string>
    <string name="todo_detail_start_text">工单开始</string>
    <string name="todo_detail_play_music_text">开始前播放宣传录音？</string>
    <string name="todo_detail_cancle_text">我点错了，取消</string>
    <string name="todo_detail_display_text">不播放，直接开始</string>
    <string name="todo_detail_start_after_play_text">播放录音后开始</string>
    <string name="todo_detail_over_text">工单结束</string>
    <string name="todo_detail_ask_over_text">确认结束任务？</string>
    <string name="todo_detail_ok_over_text">确认结束</string>
    <string name="todo_detail_recoder_end_text">录音结束</string>
    <string name="todo_detail_ask_save_recoder_text">结束并保存录音？</string>
	<string name="todo_detail_ok_save_recoder_text">确定结束录音并保存</string>
	<string name="todo_detail_recoder_again_text">再次录音</string>
	<string name="todo_detail_ask_recover_text">该任务已录音，再次录音会覆盖上次录音，确定覆盖？</string>
	<string name="todo_detail_ok_recover_text">确定覆盖上次录音</string>
	<string name="todo_detail_recoding_text">您正在录音</string>
	<string name="todo_detail_ask_back_during_recoder_text">您已开始任务，并正录音，是否保存录音并返回?</string>
	<string name="todo_detail_ok_back_text">确定返回</string> 
	<string name="todo_detail_click_for_start_text">点击开始录音</string> 
	<string name="todo_detail_click_for_end_text">点击结束录音</string> 
	<string name="todo_detail_is_playing_music_text">正在播放录音文件</string>

    <string name="todo_type_today_todolist_text">今日订单列表</string>
    <string name="todo_type_tomorrow_todolist_text">明日订单列表</string>
    <string name="todo_type_todolist_text">订单列表</string>
    
    <string name="statistics_start_month">开始月份</string>
    <string name="statistics_end_month">结束月份</string>
    
    <string name="waiting_dialog_text">正在提交请求，请稍后......</string>
</resources>
