<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/orca_title_bar_top_background"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/todo_id_text"
            android:textColor="@color/white"
            android:textSize="22dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/todo_detail_go"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_dashboard_top_left"
            android:clickable="false" >

            <TextView
                android:id="@+id/todo_detail_go_text"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/detail_go"
                android:text="@string/go_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/todo_detail_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_dashboard_top_right"
            android:clickable="false" >

            <TextView
                android:id="@+id/todo_detail_start_text"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/detail_start"
                android:text="@string/start_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/todo_detail_note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_dashboard_top_right"
            android:clickable="false" >

            <TextView
                android:id="@+id/todo_detail_note_text"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/detail_note"
                android:text="@string/note_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	>

        <LinearLayout
            android:id="@+id/todo_detail_wait"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_dashboard_bottom_left"
            android:clickable="false" >

            <TextView
                android:id="@+id/todo_detail_wait_text"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/detail_wait"
                android:text="@string/wait_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/todo_detail_over"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_dashboard_bottom_right"
            android:clickable="false" >

            <TextView
                android:id="@+id/todo_detail_over_text"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/detail_over"
                android:text="@string/over_text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/todo_detail_continue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_dashboard_bottom_right"
            android:clickable="false" >

            <TextView
                android:id="@+id/todo_detail_continue_text"
                style="@style/DashboardButton"
                android:drawableTop="@drawable/detail_continue"
                android:text="@string/continue_text" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout  
        android:id="@+id/todo_detail_panel"       
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:paddingLeft="40dip"
        android:paddingRight="20dip"
        android:orientation="vertical"
        android:background="@drawable/box_background"
         >
        <LinearLayout
            android:paddingTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_id_text" />

            <TextView
                android:id="@+id/todo_id"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_time_text" />

            <TextView
                android:id="@+id/todo_time"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_username_text" />

            <TextView
                android:id="@+id/todo_name"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_address_text" />

            <TextView
                android:id="@+id/todo_address"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        
        <LinearLayout
            android:paddingTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_phonenumber_text" />

            <TextView
                android:id="@+id/todo_phonenumber"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_state_text" />

            <TextView
                android:id="@+id/todo_state"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
            
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
                android:id="@+id/stop_play_music" android:text="@string/start_recoder_text" android:visibility="gone"/>
        </LinearLayout>
        
    </LinearLayout>
    
	<RelativeLayout android:id="@+id/recoder_panel"
		android:layout_width="fill_parent" android:layout_height="0.0dip"
		android:layout_weight="1.0"         android:visibility="gone">
		<!-- 
        <com.xiangmin.business.views.WaveFormView
            android:id="@+id/volume"
            android:layout_width="fill_parent"
            android:layout_height="140dip"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dip" />
        -->
        <TextView 
            android:layout_alignParentTop="true"
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_centerInParent="true"
            android:text="@string/recoder_voice_text"
            android:textSize="30dip"
            android:textColor="#ff0000ff"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/error_ring" />

        <ImageView
            android:id="@+id/buttonPauseResumeRecording"
            android:layout_width="100.0dip"
            android:layout_height="100.0dip"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_mic_cd" />

        <TextView
            android:id="@+id/statusbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPauseResumeRecording"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14.0dip"
            android:gravity="center"
            android:textColor="#ffaaaaaa"
            android:textSize="14.0sp"
            android:text="@string/start_recoder_after_click_text" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14.0dip"
            android:gravity="center"
            android:textColor="@color/d_fg_text_faded"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/todo_engineer"
        android:textColor="@color/white"
        android:textSize="18dip"
        android:padding="8dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/bg_subtitle"
        android:gravity="center"
        />

</LinearLayout>